--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cloudpickle==3.1.1
 Flask==3.1.1
 googledrivedownloader==1.1.0
 imbalanced-learn==0.13.0
+Jinja2==3.1.6
 jsonpickle==4.1.1
 matplotlib==3.10.0
 nltk==3.9.1
