--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,5 @@
-cloudpickle==3.1.1
-Flask==3.1.1
-googledrivedownloader==1.1.0
-imbalanced-learn==0.13.0
-Jinja2==3.1.6
-jsonpickle==4.1.1
-matplotlib==3.10.0
-nltk==3.9.1
-numpy==2.0.2
-pandas==2.2.2
-pickleshare==0.7.5
-regex==2024.11.6
-requirements-parser==0.9.0
-scikit-learn==1.6.1
-seaborn==0.13.2
-sklearn-compat==0.1.3
-sklearn-pandas==2.2.0
-tokenizers==0.21.1
+Flask==2.3.3
+numpy
+pandas
+scikit-learn
+gunicorn
