--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 Flask==3.1.1
 gunicorn
 
-pandas=2.2.2
-numpy=2.0.2
-matplotlib=3.10.0
-seaborn=0.13.2
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.10.0
+seaborn==0.13.2
 
-scikit-learn=1.6.1
+scikit-learn==1.6.1
 
-nltk=3.9.1
+nltk==3.9.1
 imbalanced-learn==0.13.0
